# django-templates

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.local.yml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/: pull_request_template.md
.github/workflows/: ci-dev.yml  ci.yml
apps/authentication/: serializers.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py
apps/refresh_tokens/: apps.py  models.py  serializers.py
apps/v1/: urls.py
apps/v1/authentication/: apps.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/v1/authentication/migrations/: 0001_initial.py
apps/v1/refresh_tokens/: apps.py  models.py  serializers.py  urls.py
apps/v1/refresh_tokens/migrations/: 0001_initial.py
authentication/: admin.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
project_name/: asgi.py  settings.py  urls.py  wsgi.py
project_name/refresh_tokens/: apps.py  models.py  serializers.py
project_name/refresh_tokens/migrations/: 0001_initial.py
project_name/settings/: common.py  local.py  production.py
project_name/users/: apps.py  models.py  serializers.py  views.py
project_name/users/migrations/: 0001_initial.py
refresh_tokens/: apps.py  models.py  serializers.py  urls.py
refresh_tokens/migrations/: 0001_initial.py
