[project]
name = "django-templates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography==44.0.2",
    "django==5.1.7",
    "django-cors-headers==4.7.0",
    "django-environ==0.12.0",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.5.0",
    "drf-spectacular==0.28.0",
    "gunicorn==23.0.0",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.0",
    "whitenoise==6.9.0",
]

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
]
